feat(API): suppresion param -c and update all roads cache and branch
