# doc/swagger.yml
@@ -52,6 +52,12 @@ paths:
           schema:
             type: string
           example: "monCache"
+        - in: query
+          name: path
+          required: true
+          schema:
+            type: string
+          example: "/mon_cache"
       requestBody:
         description: overviews.json
         required: true
@@ -130,6 +136,13 @@ paths:
         - branch
       summary: "Récupération de la liste des branches"
       description: ""
+      parameters:
+        - in: query
+          name: idCache
+          required: false
+          schema:
+            type: integer
+          example: 0
       responses:
         '200':
           description: OK
@@ -147,6 +160,12 @@ paths:
           schema:
             type: string
           example: "maBranche"
+        - in: query
+          name: idCache
+          required: true
+          schema:
+            type: integer
+          example: 0
       responses:
         '200':
           description: OK
